# CGFramework

./: BitmapFile.cpp  BitmapFile.hpp  CGFramework.kdev4  CMakeLists.txt  ImageBuffer.cpp  ImageBuffer.h  Pixelator.cpp  Pixelator.h  README.md  Texture.cpp  Texture.h  cube.h  logo.h  main.cpp  main.imagebuffer.cpp  main.modelviewer.cpp  suzanne.h
